# gmail-rs

./: Cargo.toml  Justfile  README.md  openapi.yaml  transform.yaml
examples/: drafts_create.rs  drafts_delete.rs  drafts_get.rs  drafts_list.rs  drafts_send.rs  drafts_update.rs  get_profile.rs  history_list.rs  labels_create.rs  labels_delete.rs  labels_get.rs  labels_list.rs  labels_patch.rs  labels_update.rs  messages_attachments_get.rs  messages_batch_delete.rs  messages_batch_modify.rs  messages_delete.rs  messages_get.rs  messages_import.rs  messages_insert.rs  messages_list.rs  messages_modify.rs  messages_send.rs  messages_trash.rs  messages_untrash.rs  settings_delegates_create.rs  settings_delegates_delete.rs  settings_delegates_get.rs  settings_delegates_list.rs  settings_filters_create.rs  settings_filters_delete.rs  settings_filters_get.rs  settings_filters_list.rs  settings_forwarding_addresses_create.rs  settings_forwarding_addresses_delete.rs  settings_forwarding_addresses_get.rs  settings_forwarding_addresses_list.rs  settings_get_auto_forwarding.rs  settings_get_imap.rs  (+28 more)
src/: batch.rs  lib.rs  model.rs  request.rs
src/model/: draft.rs  get_profile_response.rs  header.rs  history.rs  history_label_added.rs  history_label_removed.rs  history_message_added.rs  history_message_deleted.rs  labels_create_response.rs  labels_get_response.rs  labels_list_response.rs  labels_patch_response.rs  labels_update_response.rs  list_drafts_response.rs  list_history_response.rs  list_messages_response.rs  list_threads_response.rs  message.rs  message_part.rs  message_part_body.rs  messages_attachments_get_response.rs  settings_delegates_create_response.rs  settings_delegates_get_response.rs  settings_delegates_list_response.rs  settings_filters_create_response.rs  settings_filters_get_response.rs  settings_filters_list_response.rs  settings_forwarding_addresses_create_response.rs  settings_forwarding_addresses_get_response.rs  settings_forwarding_addresses_list_response.rs  settings_get_auto_forwarding_response.rs  settings_get_imap_response.rs  settings_get_language_response.rs  (+17 more)
transform/: Cargo.toml
(+70 files in other folders)
