[package]
name = "gmail"
edition = "2021"
version = "0.12.0"
description = "A fluent library for the Gmail API, based on OpenAPI spec"
homepage = "https://github.com/libninjacom/gmail-rs"
documentation = "https://docs.rs/gmail"
readme = "README.md"
license = "MIT"
repository = "https://github.com/libninjacom/gmail-rs"

[workspace]
members = [".", "transform"]

[dependencies]
futures = "0.3.25"
httpclient = "0.21.0"
httpclient_oauth2 = "0.2.0"
serde_json = "1.0.81"

[dependencies.chrono]
version = "0.4.26"
features = ["serde"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dev-dependencies.tokio]
version = "1.18.2"
features = ["full"]

[lib]
doctest = false
required-features = []
